style(core-button): fixing iOS 10 align issue
adding inline-block to center text on button on ios 10

issue #794

--- a/shared/components/BaseButton/BaseButton.modules.scss
+++ b/shared/components/BaseButton/BaseButton.modules.scss
@@ -50,6 +50,7 @@ $button-text-color: $color-white;
 .primary {
   background-color: $primary-bg-color;
   color: $button-text-color;
+  display: inline-block;
 
   &:hover {
     @include border;
